@@ -98,6 +98,7 @@ Improvements:
    * Naviframe is now supproting focus_direction.
    * Scroller decides whether the accelerator is on or not, depending on the velocity and the interval time of the flick event.
    * Ctxpopup is now supproting focus_direction.
+   * Don't try to pop the naviframe item multiple times.
 
 Fixes:
 
